kube/deploy/services/viewtube/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &n viewtube
  namespace: *n
spec:
  routes:
    - match: Host(`yt.${DOMAIN_PUBLIC}`)
      kind: Rule
      services:
        - name: *n
          port: 8066
      middlewares:
        - name: compress
          namespace: ingress
        - name: authelia-authz
          namespace: authelia
  tls:
    domains:
      - main: yt.${DOMAIN_PUBLIC}
